src/objects/Legal_Document_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Signed</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <referenceTo>Legal_Document__c</referenceTo>
        <relationshipLabel>Legal Document Agreements</relationshipLabel>
        <relationshipName>Legal_Document_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Terms_Signed__c</fullName>
        <label>Terms Signed</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <defaultValue>$User.Title</defaultValue>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Document_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Legal Document Agreement</label>
    <nameField>
        <displayFormat>LDA-{00000}</displayFormat>
        <label>Legal Document Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Document Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>